# project-metrics

./: 404.html  BENCHMARKS.html  CHANGELOG.html  index.html  pyproject.toml
.github/workflows/: dependabotautomerge.yml  docs.yml  job_get_metrics.yml  job_qualify_code.yml  job_update_repos.yml  matrix_update_gh_repos.yml  threading_update_gh_repos.yml
BENCHMARKS/: index.html
CHANGELOG/: index.html
OKRs/: OKRs-2025-Q2.html
OKRs/OKRs-2025-Q2/: index.html
SOPs/: SOP-2025.html  changelog-SOP.html
SOPs/SOP-2025/: index.html
SOPs/changelog-SOP/: index.html
code-analysis/: kpi_N-body-simulations.html  kpi_fitness-tracker.html  kpi_project-metrics.html  wily-loc.html  wily-mi.html
code-analysis/kpi_N-body-simulations/: index.html
code-analysis/kpi_fitness-tracker/: index.html
code-analysis/kpi_project-metrics/: index.html
code-analysis/wily-loc/: index.html
code-analysis/wily-mi/: index.html
query-results/: commit-activity.html  group-by-lang.html  popular-repos.html  repo-sizes.html  repos-without-description.html
query-results/commit-activity/: index.html
query-results/group-by-lang/: index.html
query-results/popular-repos/: index.html
query-results/repo-sizes/: index.html
query-results/repos-without-description/: index.html
search/: search_index.json
