[tool.poetry]
name = "project-metrics"
version = "0.0.1"
description = "Overview of projects and their health"
authors = ["Gustav Rasmussen <TheNewThinkTank@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
pygithub = "^2.8.1"
pandas = "^2.3.3"
tabulate = "^0.9.0"
numpy = "2.3.3"
sphinx = "^9.0.4"
seaborn = "^0.13.2"
icecream = "^2.1.8"
loguru = "^0.7.2"
file-convertion-tools = "^0.0.8"
dynaconf = "^3.2.12"
nltk = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.19.0"
pre-commit = "^4.5.0"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
ruff = "^0.14.7"
wily = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
